Add zero-copy pacing and validation harness